@@ -22,7 +22,6 @@ import org.springframework.stereotype.Component;
 import java.io.PrintWriter;
 import java.io.StringWriter;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Component
 @Scope(ConfigurableBeanFactory.SCOPE_PROTOTYPE)
@@ -65,7 +64,7 @@ public class ImmediateNotificationController implements Controller<Node> {
     notificationText.setText(notification.getText());
 
     Optional.ofNullable(notification.getActions())
-        .map(actions -> actions.stream().map(this::createButton).collect(Collectors.toList()))
+        .map(actions -> actions.stream().map(this::createButton).toList())
         .ifPresent(dialogLayout::setActions);
     if (notification.getCustomUI() != null) {
       immediateNotificationRoot.getChildren().add(notification.getCustomUI());
